// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DriveKeypad > 全消灯のスナップショットと一致する 1`] = `
<div>
  <div
    aria-label="操縦パッド"
    class="inline-grid grid-cols-3 gap-1.5"
    role="group"
  >
    <span />
    <button
      aria-label="前進"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-up size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m5 12 7-7 7 7"
        />
        <path
          d="M12 19V5"
        />
      </svg>
    </button>
    <span />
    <button
      aria-label="左旋回"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
    </button>
    <button
      aria-label="後退"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-down size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14"
        />
        <path
          d="m19 12-7 7-7-7"
        />
      </svg>
    </button>
    <button
      aria-label="右旋回"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DriveKeypad > 前進+右旋回点灯のスナップショットと一致する 1`] = `
<div>
  <div
    aria-label="操縦パッド"
    class="inline-grid grid-cols-3 gap-1.5"
    role="group"
  >
    <span />
    <button
      aria-label="前進"
      aria-pressed="true"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-primary bg-primary text-primary-foreground shadow-glow-primary"
      data-active="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-up size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m5 12 7-7 7 7"
        />
        <path
          d="M12 19V5"
        />
      </svg>
    </button>
    <span />
    <button
      aria-label="左旋回"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
    </button>
    <button
      aria-label="後退"
      aria-pressed="false"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-border bg-card text-muted-foreground hover:bg-accent hover:text-foreground"
      data-active="false"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-down size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14"
        />
        <path
          d="m19 12-7 7-7-7"
        />
      </svg>
    </button>
    <button
      aria-label="右旋回"
      aria-pressed="true"
      class="flex size-14 touch-none items-center justify-center rounded-lg border transition-all duration-150 select-none active:scale-95 focus-visible:ring-2 focus-visible:ring-ring focus-visible:outline-none border-primary bg-primary text-primary-foreground shadow-glow-primary"
      data-active="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
    </button>
  </div>
</div>
`;
